<resources>
    <string name="app_name">Projet_Sport</string>
    <string name="new_match">New Match</string>
    <string name="prev_matches">Previous Matches</string>
    <string name="player_1">Joueur 1</string>
    <string name="player_2">Joueur 2</string>
    <string name="service">Service à :</string>
    <string name="go">C\'est parti!</string>
    <string name="score">SCORE</string>
    <string name="score">SCORE</string>
    <string name="service2">SERVICE</string>
    <string name="echange">ECHANGE</string>
    <string name="let">LET</string>
    <string name="ace">ACE</string>
    <string name="Manche1">M1</string>
    <string name="Manche2">M2</string>
    <string name="Manche3">M3</string>
    <string name="gagne">Gagne</string>
    <string name="Perd">PERD</string>
    <string name="faute">FAUTE</string>
    <string name="fin">FIN</string>
    <string name="retour">RETOUR</string>
    <string name="match">MATCH</string>
    <string name="duree">DUREE</string>
    <string name="gagnant">GAGNANT:</string>
    <string name="Statistiques">STATISTIQUES</string>
    <string name="points">POINTS</string>
    <string name="aces">ACES</string>
    <string name="fautes">FAUTES</string>
    <string name="manches">MANCHES</string>
    <string name="duree2">DUREE :</string>
    <string name="title_activity_menu2">Menu2</string>
    <string name="title_activity_choixjoueur2">choixjoueur2</string>
</resources>
